services/kube-dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: kubernetes-dashboard-basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
    - host: dashboard.k8s.fhardy.fr
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
            path: /
  tls:
    - hosts:
        - dashboard.k8s.fhardy.fr
      secretName: kubernetes-dashboard-tls
